Bug 269861 - Does not load any KDE Settings, Oxygen style etc
Summary: Does not load any KDE Settings, Oxygen style etc
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
: 278960 284807 292061 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-01 03:24 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-04-01 03:24:08 UTC
Version:           unspecified
OS:                Linux

When the Chat UI is DBus activated for some people (including me since re-installing) the Chat UI will appear without the oxygen theme applied, using incorrect notifications.

It appears that the KDE session isn't set up correctly, presumably missing various parts of the environment.

Happens every time for the machines it does happen on, otherwise never.

This is not the fault of code in the Text UI or any KDE Telepathy code, but to do with dbus launched services somehow.

Reproducible: Didn't try
Comment 1 George Kiagiadakis 2011-04-01 13:13:07 UTC
I've seen this with empathy as well. This is a bug in startkde. dbus-daemon should be started after setting up the environment.
Comment 2 Martin Klapetek 2011-04-02 17:49:20 UTC
Bug #267770 seems related - it's against KPackageKit and it has been fixed. Might be worth looking into.

https://bugs.kde.org/show_bug.cgi?id=267770
Comment 3 Arno Rehn 2011-04-02 21:51:57 UTC
My last comments on 267770 are about the chat handler. Unfortunately, the fix for that bug doesn't change the chat handler thing for me (using kdelibs and -base from git master).
Comment 4 David Edmundson 2011-04-08 00:44:18 UTC
For me an upgrade to KDE4.2 seems to have fixed it.
Comment 5 Arno Rehn 2011-04-08 02:36:06 UTC
Err, which version do you mean specifically? KDE 4.2 isn't exactly up to date :)
Comment 6 David Edmundson 2011-04-08 02:39:57 UTC
I meant 4.6.2 oops...

Not sure if this is relevant but I was also running a local unsubmitted change which turns it into a KUniqueApplication rather than KApplication.
Comment 7 David Edmundson 2011-04-28 20:46:15 UTC
Haven't seen this bug in ages. Re-open if it becomes an issue.
Comment 8 Igor Poboiko 2011-04-29 13:01:26 UTC
I have it with latest git snapshot (just updated) and with KDE SC 4.6.2. 
System widget style is QtCurve, but telepathy-kde-text-ui uses Bespin style.
PS telepathy-kde-contactlist doesn't have this issue. It uses system style.
Comment 9 David Edmundson 2011-07-16 14:01:40 UTC
I've not seen or heard from this bug in ages. 

Closing. Re-open if you still have issues with anything >= KDE 4.6.3
Comment 10 Igor Poboiko 2011-07-31 20:33:09 UTC
*** Bug 278960 has been marked as a duplicate of this bug. ***
Comment 11 Igor Poboiko 2011-07-31 20:35:56 UTC
I still have this issue with KDE SC 4.7.0. Also a new bug about that was reported, so this is definitely still a problem (and not only my problem). Reopening.
Comment 12 Arno Rehn 2011-07-31 21:41:28 UTC
I've reopened Bug 267770 because the issue is the same and the people over there seem to be in the know.
Comment 13 Martin Klapetek 2011-10-23 20:03:05 UTC
*** Bug 284807 has been marked as a duplicate of this bug. ***
Comment 14 David Edmundson 2012-01-21 19:56:04 UTC
*** Bug 292061 has been marked as a duplicate of this bug. ***
Comment 15 George Kiagiadakis 2012-05-29 22:22:33 UTC
Git commit a2a1a3e29067711c2caa8414a6a6f4687d5c725a by George Kiagiadakis.
Committed on 30/05/2012 at 00:14.
Pushed by gkiagia into branch 'master'.

TelepathyHandlerApplication: Set KDE_FULL_SESSION before initializing QApplication.

This should solve issues with handlers loading wrong theme and
not respecting KDE settings in general.

Reviewed-by: David Edmundson <kde@davidedmundson.co.uk>

M  +19   -0    KTp/telepathy-handler-application.cpp
M  +1    -0    KTp/telepathy-handler-application.h

http://commits.kde.org/telepathy-common-internals/a2a1a3e29067711c2caa8414a6a6f4687d5c725a