TelepathyHandlerApplication: Set KDE_FULL_SESSION before initializing QApplication.

This should solve issues with handlers loading wrong theme and
not respecting KDE settings in general.
BUG: 269861

Reviewed-by: David Edmundson <kde@davidedmundson.co.uk>